# forecasting

./: .nojekyll  README.md  ambulance_notebook.html  ambulance_paper.html  ambulance_project.html  arima.html  evaluation.html  index.html  index.qmd  introduction.html  naive.html  other_methods.html  prophet.html  pyproject.toml  references.bib  search.json  sitemap.xml  transformation.html
.github/workflows/: quarto_publish.yml
site_libs/bootstrap/: bootstrap-3fe26dbaf5b310fa9be9d355b96116bd.min.css  bootstrap-9a805087ab83cad7e60272d68a3f1f35.min.css
website/: _quarto.yml  ambulance_notebook.qmd  ambulance_project.qmd  arima.qmd  evaluation.qmd  index.qmd  introduction.qmd  naive.qmd  prophet.qmd  references.bib  transformation.qmd
website/style/: page_style.css  style.css
