[project]
name = "forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.4",
]
